--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,8 +5,16 @@
   "start_url": "/pwa/",
   "scope": "/pwa/",
   "display": "standalone",
+  "orientation": "portrait-primary",
   "theme_color": "#667eea",
   "background_color": "#ffffff",
+  "screenshots": [
+    {
+      "src": "/pwa/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    }
+  ],
   "icons": [
     {
       "src": "/pwa/icon-192.png",
@@ -19,6 +27,18 @@
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
+    },
+    {
+      "src": "/pwa/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/pwa/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ]
 }
