--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,20 +1,13 @@
 {
-  "name": "My PWA App",
-  "short_name": "PWA",
-  "description": "My Progressive Web App",
+  "name": "My PWA Application",
+  "short_name": "MyPWA",
+  "description": "My Progressive Web App - Installable on any device",
   "start_url": "/pwa/",
   "scope": "/pwa/",
   "display": "standalone",
-  "orientation": "portrait-primary",
+  "orientation": "any",
   "theme_color": "#667eea",
-  "background_color": "#ffffff",
-  "screenshots": [
-    {
-      "src": "/pwa/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    }
-  ],
+  "background_color": "#667eea",
   "icons": [
     {
       "src": "/pwa/icon-192.png",
