--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,37 +1,42 @@
 {
-  "name": "My PWA Application",
-  "short_name": "MyPWA",
-  "description": "My Progressive Web App - Installable on any device",
-  "start_url": "/pwa/",
-  "scope": "/pwa/",
+  "name": "ThirtyOneRecord PWA",
+  "short_name": "31Record",
+  "description": "ThirtyOneRecord Progressive Web App - Installable on any device",
+  "start_url": "/",
+  "scope": "/",
+  "id": "/",
   "display": "standalone",
+  "display_override": ["window-controls-overlay", "standalone", "minimal-ui"],
   "orientation": "any",
   "theme_color": "#667eea",
   "background_color": "#667eea",
   "icons": [
     {
-      "src": "/pwa/icon-192.png",
+      "src": "/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/pwa/icon-512.png",
+      "src": "/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/pwa/icon-192.png",
+      "src": "/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "/pwa/icon-512.png",
+      "src": "/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
     }
-  ]
+  ],
+  "screenshots": [],
+  "categories": ["music", "entertainment"],
+  "shortcuts": []
 }
